--- a/toolkit/src/components/cut/filter-bar/filter/checkbox.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/checkbox.hbs
@@ -18,5 +18,11 @@
       )
     }}
     ...attributes
-  >{{yield}}</Checkbox>
+  >
+    {{#if (has-block)}}
+      {{yield}}
+    {{else}}
+      {{@name}}
+    {{/if}}
+  </Checkbox>
 {{/let}}
