--- a/toolkit/src/components/cut/filter-bar/filter/checkmark.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/checkmark.hbs
@@ -10,5 +10,11 @@
       (fn @toggle (hash filterName=@filterName text=@name value=@value))
     }}
     ...attributes
-  >{{yield}}</Checkmark>
+  >
+    {{#if (has-block)}}
+      {{yield}}
+    {{else}}
+      {{@name}}
+    {{/if}}
+  </Checkmark>
 {{/let}}
