--- a/toolkit/src/components/cut/filter-bar/filter/radio.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/radio.hbs
@@ -13,5 +13,11 @@
       )
     }}
     ...attributes
-  >{{yield}}</Radio>
+  >
+    {{#if (has-block)}}
+      {{yield}}
+    {{else}}
+      {{@name}}
+    {{/if}}
+  </Radio>
 {{/let}}
