Add development flag to filter-bar docs

--- a/documentation/app/templates/components/filter-bar.hbs
+++ b/documentation/app/templates/components/filter-bar.hbs
@@ -6,6 +6,7 @@
   @title="Filter Bar"
   @figma="https://www.figma.com/file/KIkyC5ChM8vczgqwnAeCg9/Consul-%7C-UI-Unification?type=design&node-id=3315-544301&mode=dev"
   @github="https://github.com/hashicorp/consul-ui-toolkit/tree/main/toolkit/src/components/cut/filter-bar"
+  @status="development"
 >
   A Filter Bar is used to allow the user to filter, search and sort a list of
   results. The Filter Bar does not manage the list of results itself, but
