--- a/documentation/app/templates/components/filter-bar.hbs
+++ b/documentation/app/templates/components/filter-bar.hbs
@@ -95,15 +95,31 @@
     @config={{this.filters}}
     @count={{this.count}}
     @onChange={{this.handleFilterChange}}
-    as |FB|>
-    <FB.Filter @name="clusterID" @listPosition="bottom-left" as |F|>
+    as |FB|
+  >
+    <FB.Filter
+      @name="clusterID"
+      @listPosition="bottom-left"
+      @isMultiSelect={{true}}
+      @batch={{true}}
+      as |F|
+    >
       <F.ToggleButton
         @icon="server-cluster"
         @text="Cluster ID"
         @color="secondary"
       />
-      <F.Checkmark @value={{1}} @name="Cluster One">One</F.Checkmark>
-      <F.Checkmark @value={{2}} @name="Cluster Two">Two</F.Checkmark>
+      <F.FilterInput
+        @value={{this.search}}
+        @count={{this.filteredClusters.length}}
+        @onInput={{this.updateSearch}}
+      />
+      {{#each this.filteredClusters as |cluster|}}
+        <F.Checkbox
+          @value={{cluster.id}}
+          @name={{cluster.name}}
+        >{{cluster.name}}</F.Checkbox>
+      {{/each}}
     </FB.Filter>
 
     <FB.Search placeholder="Search for services" />
@@ -130,9 +146,15 @@
       </Filters.Filter>
       <Filters.Filter @name="type" as |F|>
         <F.ToggleButton @text="Type" />
-        <F.Checkmark @value="consul" @name="Consul">Consul</F.Checkmark>
-        <F.Checkmark @value="nomad" @name="Nomad">Nomad</F.Checkmark>
-        <F.Checkmark @value="vault" @name="Vault">Vault</F.Checkmark>
+        <F.Checkmark @value="consul" @name="Consul" />
+        <F.Checkmark @value="nomad" @name="Nomad" />
+        <F.Checkmark @value="vault" @name="Vault" />
+      </Filters.Filter>
+      <Filters.Filter @name="juice" as |F|>
+        <F.ToggleButton @text="Juice" />
+        <F.Radio @value="oj" @name="Orange">Orange Juice</F.Radio>
+        <F.Radio @value="apple" @name="Apple">Apple Juice</F.Radio>
+        <F.Radio @value="lemonade" @name="Lemonade">Lemonade</F.Radio>
       </Filters.Filter>
     </FB.FilterGroup>
     <FB.Sort as |S|>
