Update clear-filters button to be small

--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -109,6 +109,7 @@
         @color='tertiary'
         @icon='x'
         @type='button'
+        @size='small'
         {{on 'click' this.clearFilters}}
       />
     {{/if}}
