Only show clear filters if there is a non-required filter

--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -103,7 +103,7 @@
       {{/each}}
     {{/each}}
 
-    {{#if (gt this.appliedFilters.length 0)}}
+    {{#if this.shouldShowClearFiltersButton}}
       <Hds::Button
         @text='Clear filters'
         @color='tertiary'
