Initial draft of List component

--- a/documentation/app/templates/application.hbs
+++ b/documentation/app/templates/application.hbs
@@ -36,6 +36,7 @@
           @route="components.service-instance-list-item"
         />
         <S.Link @text="Filter Bar" @route="components.filter-bar" />
+        <S.Link @text="List" @route="components.list" />
       </Hds::SideNav::List>
     </:body>
   </Hds::SideNav>
