--- a/toolkit/src/styles/@hashicorp/consul-ui-toolkit.scss
+++ b/toolkit/src/styles/@hashicorp/consul-ui-toolkit.scss
@@ -6,3 +6,4 @@
 @use '../components/text-with-icon';
 @use '../components/copy-block';
 @use '../components/filter-bar';
+@use '../components/list';
