Fix state issues and clear some dependencies

--- a/toolkit/src/components/cut/filter-bar/filter-group.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter-group.hbs
@@ -15,6 +15,7 @@
         toggle=@toggle
         softToggle=@softToggle
         applyFilter=@applyFilter
+        clearPendingFilter=@clearPendingFilter
         isChecked=@isChecked
         config=@config
         localConfig=@localConfig
