--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -35,6 +35,7 @@
             toggle=this.toggleFilterValue
             softToggle=this.softToggleFilterValue
             applyFilter=this.applyFilter
+            clearPendingFilter=this.clearPendingFilter
             isChecked=this.isChecked
             config=@config
             localConfig=this.localConfig
