--- a/toolkit/src/components/cut/filter-bar/sort-group.hbs
+++ b/toolkit/src/components/cut/filter-bar/sort-group.hbs
@@ -11,6 +11,7 @@
         toggle=@toggle
         softToggle=@softToggle
         applyFilter=@applyFilter
+        clearPendingFilter=@clearPendingFilter
         isChecked=@isChecked
         config=@config
         localConfig=@localConfig
