Upgrade @hashicorp/design-system-component and ember-cli-clipboard

--- a/toolkit/src/components/cut/copy-block/index.hbs
+++ b/toolkit/src/components/cut/copy-block/index.hbs
@@ -2,13 +2,26 @@
   Copyright (c) HashiCorp, Inc.
 }}
 
-<div class="cut-copy-block" ...attributes>
+<div class='cut-copy-block' ...attributes>
   <div data-test-copy-block-content>{{yield}}</div>
-  <div class="cut-copy-block__copy-button">
-    <CopyButton @clipboardText={{@clipboardText}}
-                @success={{perform this.copied}}
-                class={{if this.isSuccessfullyCopied 'cut-copy-block__copy-button--checked' ''}}>
-      <FlightIcon @name={{if this.isSuccessfullyCopied 'clipboard-checked' 'clipboard-copy'}} @size="16"/>
+  <div class='cut-copy-block__copy-button'>
+    <CopyButton
+      @text={{@clipboardText}}
+      @onSuccess={{perform this.copied}}
+      class={{if
+        this.isSuccessfullyCopied
+        'cut-copy-block__copy-button--checked'
+        ''
+      }}
+    >
+      <FlightIcon
+        @name={{if
+          this.isSuccessfullyCopied
+          'clipboard-checked'
+          'clipboard-copy'
+        }}
+        @size='16'
+      />
     </CopyButton>
   </div>
 </div>
