Add optional totalCount

--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -76,7 +76,10 @@
   <div class='cut-filter-bar-results'>
     {{#let (if @count @count 0) as |count|}}
       <p class='cut-filter-bar-results-count'>Showing
-        {{pluralize count 'result'}}</p>
+        {{pluralize count 'result'}}{{if
+          @totalCount
+          (concat ' of ' @totalCount)
+        }}</p>
     {{/let}}
 
     {{#each this.appliedFilters as |filter|}}
