Hook up next page stuff and routes

--- a/documentation/app/templates/components/list.hbs
+++ b/documentation/app/templates/components/list.hbs
@@ -124,6 +124,8 @@
     @onPageChange={{this.dummy}}
     @pageSizes={{array 5 10 20 30}}
     @currentPageSize={{5}}
+    @nextCursor="2fdasf"
+    @prevCursor="fdafsdaf"
     @onPageSizeChange={{this.dummy}}
   />
 </Cut::List>
