--- a/documentation/app/styles/app.scss
+++ b/documentation/app/styles/app.scss
@@ -8,6 +8,7 @@
 @import "./components/page-header";
 @import "./components/preview-block.scss";
 @import "./components/in-page-nav.scss";
+@import "./pages/list";
 @import "./pages/list-item";
 @import "./pages/list-item-template";
 
