--- a/toolkit/src/components/cut/list/pagination.hbs
+++ b/toolkit/src/components/cut/list/pagination.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <div class='cut-list-pagination' ...attributes>
   {{#if @onPageChange}}
     <Hds::Pagination::Compact
