--- a/toolkit/src/components/cut/list-item/index.hbs
+++ b/toolkit/src/components/cut/list-item/index.hbs
@@ -15,6 +15,8 @@
       @isHrefExternal={{@isHrefExternal}}
       @query={{@query}}
       @replace={{@replace}}
+      @model={{@model}}
+      @models={{@models}}
       {{on 'click' this.onClickAction}}
       ...attributes
     >
