Add to ServiceListItem and ServiceInstanceListItem

--- a/toolkit/src/components/cut/list-item/service-instance/index.hbs
+++ b/toolkit/src/components/cut/list-item/service-instance/index.hbs
@@ -6,6 +6,8 @@
   @href={{@href}}
   @isRouteExternal={{@isRouteExternal}}
   @route={{@route}}
+  @model={{@model}}
+  @models={{@models}}
   @isHrefExternal={{@isHrefExternal}}
   @query={{@query}}
   @replace={{@replace}}
