Update filter bar results text

--- a/documentation/app/templates/components/filter-bar.hbs
+++ b/documentation/app/templates/components/filter-bar.hbs
@@ -16,6 +16,7 @@
 
 <Cut::FilterBar
   @config={{this.filters}}
+  @name="service"
   @count={{this.count}}
   @onChange={{this.handleFilterChange}}
   as |FB|
@@ -221,7 +222,6 @@
 
 <Cut::FilterBar
   @config={{this.filters}}
-  @count={{this.count}}
   @onChange={{this.handleFilterChange}}
   as |FB|
 >
