Update filter-bar default results text

--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -81,6 +81,8 @@
           @totalCount
           (concat ' of ' @totalCount)
         }}
+      {{else if this.isFiltering}}
+        Filters applied:
       {{else}}
         Showing all
         {{if @name (pluralize @name) 'results'}}
