--- a/toolkit/src/components/cut/metadata/health-check-badge-set/index.hbs
+++ b/toolkit/src/components/cut/metadata/health-check-badge-set/index.hbs
@@ -7,10 +7,7 @@
     <Hds::Badge
       @color='critical'
       @icon='x'
-      @text={{if (eq @type 'service-parent') 
-        'Critical'
-        (concat @criticalCount '/' this.total ' ' @type ' checks')
-      }}
+      @text={{concat @criticalCount '/' this.total ' ' @type ' checks'}}
       @size="small"
       data-test-health-check-critical={{@type}}
     />
@@ -20,10 +17,7 @@
     <Hds::Badge
       @color='warning'
       @icon='alert-triangle'
-      @text={{if (eq @type 'service-parent') 
-        'Warning'
-        (concat @warningCount '/' this.total ' ' @type ' checks')
-      }}
+      @text={{concat @warningCount '/' this.total ' ' @type ' checks'}}
       @size="small"
       data-test-health-check-warning={{@type}}
     />
@@ -33,10 +27,7 @@
     <Hds::Badge
       @color='success'
       @icon='check'
-      @text={{if (eq @type 'service-parent') 
-        'Healthy'
-        (concat @successCount '/' this.total ' ' @type ' checks')
-      }}
+      @text={{concat @successCount '/' this.total ' ' @type ' checks'}}
       @size="small"
       data-test-health-check-success={{@type}}
     />
