--- a/toolkit/src/components/cut/filter-bar/search.hbs
+++ b/toolkit/src/components/cut/filter-bar/search.hbs
@@ -6,6 +6,7 @@
   {{#let @group as |SG|}}
     <SG.TextInput
       @type='search'
+      @value={{@search}}
       placeholder='Search'
       aria-label='Search'
       {{on 'keyup' @onSearchKeyup}}
@@ -16,6 +17,7 @@
 {{else}}
   <Hds::Form::TextInput::Base
     @type='search'
+    @value={{@search}}
     placeholder='Search'
     aria-label='Search'
     class='cut-filter-bar-search'
