Update SERVICE_KIND to include all service kinds

--- a/toolkit/src/components/cut/list-item/service/index.hbs
+++ b/toolkit/src/components/cut/list-item/service/index.hbs
@@ -25,7 +25,7 @@
             @warningCount={{@service.metadata.healthCheck.instance.warning}}
             @criticalCount={{@service.metadata.healthCheck.instance.critical}}
           />
-          {{#if @service.metadata.kind}}
+          {{#if this.kindName}}
             <Cut::TextWithIcon
               @icon='gateway'
               @text={{this.kindName}}
