Update docs example

--- a/documentation/app/templates/components/service-list-item.hbs
+++ b/documentation/app/templates/components/service-list-item.hbs
@@ -115,6 +115,7 @@
                       critical: 0,
                     },
                   },
+                  kind: 'typical',
                   instanceCount: 8,
                   isImported: true,
                   samenessGroup: 'group-1',
