Add model/models/replace to Cut::List::Pagination

--- a/toolkit/src/components/cut/list/pagination.hbs
+++ b/toolkit/src/components/cut/list/pagination.hbs
@@ -17,6 +17,9 @@
       @showLabels={{true}}
       @queryFunction={{this.queryFunction}}
       @route={{or @route this.router.currentRouteName}}
+      @model={{@model}}
+      @models={{@models}}
+      @replace={{@replace}}
       @isDisabledPrev={{not @prevCursor}}
       @isDisabledNext={{not @nextCursor}}
     />
