Update filter-bar results text for searching

--- a/toolkit/src/components/cut/filter-bar/index.hbs
+++ b/toolkit/src/components/cut/filter-bar/index.hbs
@@ -83,6 +83,8 @@
         }}
       {{else if this.isFiltering}}
         Filters applied:
+      {{else if this.isSearching}}
+        Searching{{if @name (concat ' ' (pluralize @name))}}
       {{else}}
         Showing all
         {{if @name (pluralize @name) 'results'}}
