--- a/toolkit/src/components/cut/list-item/service/index.hbs
+++ b/toolkit/src/components/cut/list-item/service/index.hbs
@@ -18,7 +18,14 @@
   <L.Content as |C|>
     <Cut::ListItem::Template as |T|>
       <T.Section as |SC|>
-        <SC.Title data-test-service-name>{{@service.name}}</SC.Title>
+        <SC.Title data-test-service-name>
+          {{@service.name}}
+          <Cut::Metadata::ClusterPath
+            @clusterId={{@service.metadata.clusterId}}
+            @partition={{@service.metadata.partition}}
+            @namespace={{@service.metadata.namespace}}
+          />
+        </SC.Title>
         <SC.Metadata>
           <Cut::Metadata::ServiceHealthBadge
             @successCount={{@service.metadata.healthCheck.instance.success}}
