--- a/documentation/app/templates/components/service-list-item.hbs
+++ b/documentation/app/templates/components/service-list-item.hbs
@@ -174,6 +174,9 @@
               tags: string[];
               upstreamCount?: number;
               linkedServiceCount?: number;
+              clusterId: string | undefined;
+              partition?: string;
+              namespace?: string;
             };
           }
           "}}}
@@ -317,6 +320,22 @@
           metadata.
         </ComponentApi>
 
+        <ComponentApi
+          @name="service.metadata.clusterId"
+          @isRequired={{true}}
+          @type="string"
+        >The unique identifier of the Consul cluster the service is registered with.</ComponentApi>
+        <ComponentApi
+          @name="service.metadata.partition"
+          @isRequired={{false}}
+          @type="string"
+        >The partition where the service is deployed.</ComponentApi>
+        <ComponentApi
+          @name="service.metadata.namespace"
+          @isRequired={{false}}
+          @type="string"
+        >The namespace where the service is deployed.</ComponentApi>
+
         <h4 id="health-check">Health check</h4>
         The
         <CodeInline @code="service.metadata.healthCheck" />
@@ -348,12 +367,18 @@
           <CodeInline @code="critical" />
           status.</ComponentApi>
 
+        <h3 id="options">Options</h3>
+          <ComponentApi @name="hideClusterPath" @type="boolean">
+            Determines whether the cluster ID, partition, and namespace are displayed in the Service List Item. Default value is <CodeInline @code="false" />.
+          </ComponentApi>
+
       </div>
       <InPageNav as |I|>
         <I.Link @section="#component-api">Component API</I.Link>
         <I.Link @section="#service" @depth={{2}}>Service</I.Link>
         <I.Link @section="#metadata" @depth={{2}}>Metadata</I.Link>
         <I.Link @section="#health-check" @depth={{2}}>Health check</I.Link>
+        <I.Link @section="#options" @depth={{2}}>Options</I.Link>
       </InPageNav>
     </div>
   </T.Panel>
