--- a/toolkit/src/styles/components/cluster-path.scss
+++ b/toolkit/src/styles/components/cluster-path.scss
@@ -8,8 +8,8 @@
 
 .cut-service-cluster-path {
   color: var(--token-color-foreground-faint);
-  font-size: 14px;
-  font-weight: 400;
+  font-size: var(--token-typography-body-200-font-size);
+  font-weight: var(--token-typography-font-weight-regular);
   display: flex;
   align-items: center;
   gap: 4px;
