List item style updates

--- a/toolkit/src/components/cut/list-item/section/metadata.hbs
+++ b/toolkit/src/components/cut/list-item/section/metadata.hbs
@@ -3,6 +3,6 @@
 }}
 
 <div
-  class='cut-list-item-section__metadata hds-typography-body-200 hds-font-weight-regular'
+  class='cut-list-item-section__metadata hds-typography-display-100 hds-font-weight-regular'
   ...attributes
 >{{yield}}</div>
