CC-6218: list item template styling and strict mtls icon (#70)
* List item style updates

* Add strict mTLS text with icon

* changeset

--- a/toolkit/src/components/cut/list-item/service/index.hbs
+++ b/toolkit/src/components/cut/list-item/service/index.hbs
@@ -70,6 +70,17 @@
               @text='permissive mTLS'
               data-test-permissive-mtls
             />
+          {{else if
+            (and
+              (eq @service.metadata.isPermissiveMTls false)
+              (not (eq @service.metadata.isPermissiveMTls undefined))
+            )
+          }}
+            <Cut::TextWithIcon
+              @icon='lock'
+              @text='strict mTLS'
+              data-test-strict-mtls
+            />
           {{/if}}
           <Cut::Metadata::InServiceMesh
             @connectedWithGateway={{@service.metadata.connectedWithGateway}}
