Upgrade @hashicorp/design-system-components

--- a/toolkit/src/styles/components/filter-bar.scss
+++ b/toolkit/src/styles/components/filter-bar.scss
@@ -40,6 +40,7 @@
     row-gap: 12px;
     margin: 12px 0;
     font-size: var(--token-typography-body-200-font-size);
+    line-height: 28px;
 
     p.cut-filter-bar-results-count {
       margin: 0;
