Update search to take width, isInvalid, isLoading

--- a/documentation/app/templates/components/filter-bar.hbs
+++ b/documentation/app/templates/components/filter-bar.hbs
@@ -226,7 +226,7 @@
   as |FB|
 >
   <FB.FilterGroup as |Filters|>
-    <Filters.Search placeholder="Search for services" />
+    <Filters.Search @width="300px" placeholder="Search for services" />
 
     <Filters.Filter
       @name="status"
