update docs: link to fb-watchman docs in CONTRIBUTING.md, and clean up ServiceListItem component API doc

--- a/documentation/app/templates/components/service-list-item.hbs
+++ b/documentation/app/templates/components/service-list-item.hbs
@@ -368,8 +368,8 @@
           status.</ComponentApi>
 
         <h3 id="options">Options</h3>
-          <ComponentApi @name="hideClusterPath" @type="boolean">
-            Determines whether the cluster ID, partition, and namespace are displayed in the Service List Item. Default value is <CodeInline @code="false" />.
+          <ComponentApi @name="hideClusterPath" @type="boolean" @default="false">
+            Determines whether the cluster ID, partition, and namespace are displayed in the Service List Item.
           </ComponentApi>
 
       </div>
