Upgrade hds packages

--- a/documentation/app/templates/index.hbs
+++ b/documentation/app/templates/index.hbs
@@ -11,6 +11,7 @@
   <T.Panel>
     <div class="doc-Page">
       <div class="doc-Page-content">
+        <Hds::Tag @text="Test tag" />
         <p>Consul UI Toolkit is a collection of presentational components and
           utilities specifically meant to be shared across the different Consul
           applications. The toolkit contains generic components that you may
