chore(ember): use unambiguous helper format when using 3rd party helpers in templates

--- a/toolkit/src/components/cut/copy-block/index.hbs
+++ b/toolkit/src/components/cut/copy-block/index.hbs
@@ -7,7 +7,7 @@
   <div class='cut-copy-block__copy-button'>
     <CopyButton
       @text={{@clipboardText}}
-      @onSuccess={{perform this.copied}}
+      @onSuccess={{ (perform this.copied) }}
       class={{if
         this.isSuccessfullyCopied
         'cut-copy-block__copy-button--checked'
