chore: run ember-angle-bracket codemod to convert unambiguous helper usage

--- a/toolkit/src/components/cut/filter-bar/filter/filter-input.hbs
+++ b/toolkit/src/components/cut/filter-bar/filter/filter-input.hbs
@@ -21,7 +21,7 @@
       >
         <span>{{@label}}</span>
         {{#if @count}}
-          <span>{{or @count 0}}</span>
+          <span>{{(or @count 0)}}</span>
         {{/if}}
       </span>
     </Components.Generic>
